# backend/src/main/java/com/bootcamp/backend/backend/project/ProjectController.java
@@ -11,7 +11,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 @RestController
-@RequestMapping(path = "projects", consumes = MediaType.APPLICATION_JSON_VALUE)
+@RequestMapping(path = "projects")
 @CrossOrigin()
 @AllArgsConstructor
 public class ProjectController {
